# ShapesLibrary

./: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp
Canvas/: Canvas.cpp  Canvas.h
Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h
Point/: Point.cpp  Point.h
PrimitiveShapes/: Circle.cpp  Circle.h  Polygon.cpp  Polygon.h
